--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <img src="./images/smiley_face.jpg" alt="A smiley face">
 
     <h2>Sub Header</h2>
+    <p> This is a test </p>
 
     <h1>h1</h1>
     <h2>h2</h2>
